--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>D3 Page Template</title>
+<title>D3-PracticePage</title>
 <!--<script type="text/javascript" src="d3/d3.js"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.0.0/d3.js"></script>
 </head>
@@ -10,7 +10,7 @@
 <body>
 <script type="text/javascript">
 	var dataset = [ 5, 10, 13, 19, 21, 25, 22, 18, 15, 13,
-							11, 12, 15, 20, 18, 17, 16, 18, 23, 25];
+							11, 12, 15, 20, 18, 17, 6, 18, 23, 25];
 	var w=500;
 	var h=100;
 	var barPadding=1;
